testsuite/tests/typecheck/should_fail/T2414.stderr
T2414.hs:9:13: error: [GHC-27958]
    • Couldn't match type ‘a0’ with ‘(Bool, a0)’
      Expected: Maybe (Bool, a0)
        Actual: Maybe a0
    • In the first argument of ‘unfoldr’, namely ‘Just’
      In the expression: unfoldr Just
      In an equation for ‘f’: f = unfoldr Just

